src/docs/MA_dot2/viewitem_effect/es/1.1/index.md
---
originalUrl: 'https://help2.malighting.com/Page/MA_dot2/viewitem_effect/es/1.1'
---

<div class="topic-navigation">

<div class="pull-right">
	<span class="pull-left">


<div class="pull-left">
<form action="/Topic/SetCurrentVersionNumber" class="form-inline" id="frmTagSelector" method="post">	<span class="form-mini">
		<div class="input-prepend"><span class="add-on">Select different version</span><select autocomplete="off" id="versionNumberId" name="versionNumberId" onchange="$(this).closest('#frmTagSelector').submit();" style="width: 120px;"><option value="">- latest -</option>
<option selected="selected" value="3">1.1</option>
<option value="7">1.2</option>
<option value="12">1.3</option>
<option value="16">1.5</option>
<option value="29">1.9</option>
</select></div>
		<input data-val="true" data-val-number="The field Int32 must be a number." data-val-required="The Int32 field is required." id="ProductId" name="ProductId" type="hidden" value="7">
		<input id="CurrentGuid" name="CurrentGuid" type="hidden" value="0e539790-291a-4be0-be05-8f3e8d81c0eb">
	</span>
</form></div>&nbsp;	</span>
	<span class="pull-right" style="white-space: nowrap;">
			<button class="btn btn-mini" onclick="location.href='/Page/MA_dot2/window_editcuenumbers/es/1.1'; " title="Go to previous page 'Editar Número(s) de Cue'">
				<i class="icon-arrow-left"></i> previous
			</button>

			<button class="btn btn-mini" onclick="location.href='/Page/MA_dot2/window_emptyexecutor/es/1.1';" title="Go to next page 'Ejecutor Vacío'">
				next <i class="icon-arrow-right"></i> 
			</button>
	</span>
</div>
<div class="clear-fix" style="margin-bottom: 10px"></div>
</div>

					<div class="infobox"><b>Hint:</b><br><b>New help version</b><br>The help version you selected belongs to an older software version. <a href="/Topic/SetCurrentVersionNumber/29/0e539790-291a-4be0-be05-8f3e8d81c0eb">You may want to view the latest help version.</a></div>

			<div class="pull-right">
					<button class="btn btn-mini" style="margin-right: 10px; height: 30px;" onclick="location.href = '/Media/TopicPdf/7319/3'; " title="Open/Save this topic as PDF document for viewing or printing">
						<img src="/Content/images/icons/filetype_pdf.png" style="height: 24px;"> Open topic as PDF
					</button>
				<span class="badge badge-info">Version 1.1</span>
			</div>
		<h1>Vista Efectos</h1>

			<div class="topic-table-of-contents">
				<h2>Table of contents of this topic</h2>
				<div class="topic-toc-toggler topic-toc-toggler-hide"><a href="#" onclick="$('.topic-toc-ul').toggle(); $('.topic-toc-toggler-hide').hide(); $('.topic-toc-toggler-show').show(); return false;">hide</a></div>
				<div class="topic-toc-toggler topic-toc-toggler-show" style="display: none;"><a href="#" onclick="$('.topic-toc-ul').toggle(); $('.topic-toc-toggler-hide').show(); $('.topic-toc-toggler-show').hide(); return false;">show</a></div>
				<ul class="topic-toc-ul">
						<li>
							<a href="#toc_header_anchor_1">Off Efectos</a>
						</li>
						<li>
							<a href="#toc_header_anchor_2">Stomp Efectos</a>
						</li>
						<li>
							<a href="#toc_header_anchor_3">Opciones de Efectos</a>
						</li>
						<li>
							<a href="#toc_header_anchor_4">Efectos de Dimmer</a>
						</li>
						<li>
							<a href="#toc_header_anchor_5">Efectos de posición</a>
						</li>
						<li>
							<a href="#toc_header_anchor_6">Efectos de Gobo</a>
						</li>
						<li>
							<a href="#toc_header_anchor_7">Efectos de Color</a>
						</li>
						<li>
							<a href="#toc_header_anchor_8">Efectos Beam</a>
						</li>
						<li>
							<a href="#toc_header_anchor_9">Efectos Focus</a>
						</li>
						<li>
							<a href="#toc_header_anchor_10">Funciones Barra Encoders</a>
						</li>
						<li>
							<a href="#toc_header_anchor_11">Links&nbsp;relacionados</a>
						</li>
				</ul>
			</div>

		<p>Para acceder a la vista de Efectos presiona la tecla&nbsp;<span class="hardkey">Effect</span>&nbsp;en la consola o&nbsp;presiona el icono de efecto&nbsp;<img alt="" src="/Media/Image/Dot2_ViewsandWindows_ControlElements_TitleBar17_1-0.PNG">&nbsp;en la barra de título&nbsp;del tipo de preset.</p>

<p><span class="image_gray_border"><img alt="" src="/Media/Image/Dot2_ViewsandWindows_EffectsView01_1-0.PNG"></span></p>

<p>La vista de efectos depende de la selección de aparatos en la&nbsp;<a href="/Topic/989f0b88-de3d-4818-8c0b-a69fa90b2106">Vista de Aparatos</a>&nbsp;y el tipo de preset seleccionado en la&nbsp;<a href="/Topic/60e350ef-d825-4072-a644-ed2430d82522">barra tipo de preset</a>.</p>

<p>Hay efectos predefinidos disponibles para los siguientes tipos de preset:</p>

<ul>
	<li>Dimmer</li>
	<li>Position</li>
	<li>Gobo</li>
	<li>Color</li>
	<li>Beam</li>
	<li>Focus</li>
</ul>

<p>Para ir a la <strong>Vista Efectos de dimmer </strong>selecciona Dimmer en la&nbsp;<a href="/Topic/60e350ef-d825-4072-a644-ed2430d82522">barra tipo de preset</a>.</p>

<p>La barra de título muestra en cual vista de efectos estás, ej. Efectos de&nbsp;Dimmer.</p>

<p>En el lado izquierdo de la vista se muestran los efectos disponibles para la selección de aparatos y tipo de preset seleccionado.</p>

<p>Los botones en el lado derecho de la vista son opciones adicionales para el efecto.</p>

<p>El efecto seleccionado tiene un recuadro blanco alrededor</p>

<p>En la esquina superior izquierda está el número de objeto del efecto.</p>

<a name="toc_header_anchor_1" id="toc_header_anchor_1" class="topic-toc-item"></a><h2>Off Efectos</h2>

<p>Cada vista efecto tiene una función Off.<br>
Presiona Off para descartar un efecto en uso sobre la selección de aparatos en el programador.<br>
Si presionas Off en la vista de efectos dimmer, todos los efectos dimmer serán descartados en el programador.</p>

<p><strong>Ejemplo:</strong><br>
Supongamos que tienes un efecto dimmer activo en el programador y valores pan tilt adicionales.</p>

<p><img alt="" src="/Media/Image/Dot2_ViewsandWindows_EffectsView02_1-0.PNG"></p>

<p>Para descartar solamente los valores del efecto de los aparatos seleccionados, abre la&nbsp;<strong>vista efecto de dimmer </strong>y pulsa&nbsp;<span class="softkey">Off</span>.</p>

<p><img alt="" src="/Media/Image/Dot2_ViewsandWindows_EffectsView03_1-0.PNG"></p>

<p>Se ha descartado el efecto de dimmer del programador.</p>

<a name="toc_header_anchor_2" id="toc_header_anchor_2" class="topic-toc-item"></a><h2>Stomp Efectos</h2>

<p>Cada vista de Efectos tiene una función Stomp.<br>
Pulsa stomp para desactivar un efecto almacenado en un ejecutor.</p>

<p>Para desactivar Stomp, presiona la tecla&nbsp;<span class="hardkey">Clear</span>.</p>

<p><strong>Ejemplo:</strong><br>
Supongamos que tienes almacenada la cue 1 con un efecto de dimmer y quieres desactivarlo en la cue 2.</p>

<ol>
	<li>Selecciona los aparatos sobre los cuales quieres desactivar el efecto de la cue 1.</li>
	<li>Abre la vista efectos de dimmer y pulsa&nbsp;<span class="softkey">Stomp</span>.</li>
	<li>Presiona&nbsp;<span class="hardkey">Store</span> <span class="hardkey">Cue</span> <span class="hardkey">2</span> <span class="hardkey">Please</span>.</li>
</ol>

<p>El efecto de dimmer comienza en la cue 1 y se desactiva en la cue 2.</p>

<a name="toc_header_anchor_3" id="toc_header_anchor_3" class="topic-toc-item"></a><h2>Opciones de Efectos</h2>

<p>Las opciones de los efectos son siete botones en la parte derecha de la pantalla.</p>

<p><strong>Dirección&nbsp;&lt;&gt;: </strong><br>
El botón dirección &lt;&gt; está disponible si tienes aparatos con un efecto ejecutándose en el programador.<br>
Pulsa para cambiar la dirección del efecto de izquierda a derecha o al revés.</p>

<p><strong>Selección&nbsp;aleatoria:</strong><br>
El botón de selección aleatoria está disponible si tienes una selección de aparatos en el programador.<br>
Pulsa para mezclar el orden de selección de aparatos. Esto es lo mismo que seleccionar "Shuffle Selection"&nbsp;en el&nbsp;<a href="/Topic/c2173bc1-c86a-4c4f-b2d7-05a83f0e9b2a">Pool de Macros</a>.</p>

<p><strong>Sync:</strong><br>
El botón Sync está disponible si los efectos están activos en el programador.<br>
Pulsa para sincronizar los efectos en el programador. Consultar, <a href="/Topic/9975e836-d91c-4784-ba24-1ff914585759">Comando SyncEffects</a>.</p>

<p><strong>Align &gt;:</strong><br>
Selecciona el modo align &gt;. Consultar en, <a href="/Topic/653b1e1b-2bcd-4065-b918-bef12958ceb3">Tecla Align</a></p>

<p><strong>Align &lt;:</strong><br>
Selecciona el modo align &lt;. Consultar en, <a href="/Topic/653b1e1b-2bcd-4065-b918-bef12958ceb3">Tecla Align</a></p>

<p><strong>Align &gt;&lt;:</strong><br>
Selecciona el modo align &gt;&lt;. Consultar en, <a href="/Topic/653b1e1b-2bcd-4065-b918-bef12958ceb3">Tecla Align</a></p>

<p><strong>Align Off</strong> (default)<strong>:</strong><br>
Desactiva el modo align. Consultar en, <a href="/Topic/653b1e1b-2bcd-4065-b918-bef12958ceb3">Tecla Align</a></p>

<a name="toc_header_anchor_4" id="toc_header_anchor_4" class="topic-toc-item"></a><h2>Efectos de Dimmer</h2>

<p>En dot2 hay disponibles seis efectos de dimmer predefinidos.</p>

<p><strong>Soft Dimmer </strong>(objeto número&nbsp;1):<br>
Abre y cierra el dimmer&nbsp;con suavidad.</p>

<p><span class="image_gray_border"><img alt="" src="/Media/Image/Dot2_ViewsandWindows_EffectsView04_1-0.png"></span></p>

<p><strong>Hard Dimmer </strong>(objeto número&nbsp;2):<br>
Abre y cierra el dimmer sin suavidad.</p>

<p><span class="image_gray_border"><img alt="" src="/Media/Image/Dot2_ViewsandWindows_EffectsView05_1-0.png"></span></p>

<p><strong>Ramp Up Dimmer</strong> (objeto número&nbsp;3):<br>
Dimmer&nbsp;salta a&nbsp;100% y y funde lentamente hasta 0%.</p>

<p><span class="image_gray_border"><img alt="" src="/Media/Image/Dot2_ViewsandWindows_EffectsView06_1-0.png"></span></p>

<p><strong>Ramp Down Dimmer </strong>(objeto número&nbsp;4):<br>
Dimmer&nbsp;salta a 0% y funde lentamente subiendo hasta 100%.</p>

<p><span class="image_gray_border"><img alt="" src="/Media/Image/Dot2_ViewsandWindows_EffectsView07_1-0.png"></span></p>

<p><strong>Dim/P/T Ballyhoo </strong>(objeto número&nbsp;8):<a id="Dim/P/T Ballyhoo" name="Dim/P/T Ballyhoo"></a><br>
Efecto suave de dimmer y movimiento de pan y tilt.<br>
Este efecto también se encuentra en los efectos de posición.</p>

<p><span class="image_gray_border"><img alt="" src="/Media/Image/Dot2_ViewsandWindows_EffectsView08_1-0.png"></span></p>

<p><strong>Dim/Tilt Flyout </strong>(objeto&nbsp;numero&nbsp;9):<a id="Dim/Tilt Flyout" name="Dim/Tilt Flyout"></a><br>
Los aparatos se mueven entre la posición 1 y 2<br>
Después de alcanzar la posición 2 el dimmer se atenúa hasta 0% y el aparato vuelve a la posición 1.</p>

<p><span class="image_gray_border"><img alt="" src="/Media/Image/Dot2_ViewsandWindows_EffectsView09_1-0.png"></span></p>

<a name="toc_header_anchor_5" id="toc_header_anchor_5" class="topic-toc-item"></a><h2>Efectos de posición</h2>

<p>En dot2 hay disponibles cinco efectos de posición predefinidos.</p>

<p><strong>Circle</strong> (objeto&nbsp;número&nbsp;5):<br>
Los aparatos se mueven en círculo.</p>

<p><strong>Pan Sinus</strong> (objeto número&nbsp;6):<br>
Efecto suave de pan.</p>

<p><strong>Tilt Sinus</strong> (objeto número&nbsp;7)<br>
Efecto suave de tilt.</p>

<p><strong>Dim/P/T Ballyhoo</strong> (objeto número&nbsp;8):<br>
Consultar en, <a href="#Dim/P/T Ballyhoo">Dim/P/T Ballyhoo</a>&nbsp;en efectos de dimmer.</p>

<p><strong>Dim/Tilt Flyout </strong>(objeto número&nbsp;9):<br>
Consultar en, <a href="#Dim/Tilt Flyout">Dim/Tilt Flyout</a>&nbsp;en efectos de dimmer.</p>

<a name="toc_header_anchor_6" id="toc_header_anchor_6" class="topic-toc-item"></a><h2>Efectos de Gobo</h2>

<p>En dot2 hay disponibles tres efectos de gobos predefinidos.</p>

<p><strong>2 Gobo</strong> (objeto número&nbsp;10):<br>
Cambia entre dos gobos de la rueda de gobos.<br>
Selecciona los gobos con valor alto y valor bajo en el modo efecto de&nbsp;la&nbsp;<a href="/Topic/16b6da99-c52a-4ff8-a746-ecdacda313ff">vista tipo de preset&nbsp;gobo</a>.</p>

<p><span class="image_gray_border"><img alt="" src="/Media/Image/Dot2_ViewsandWindows_EffectsView10_1-0.png"></span></p>

<p><strong>Gobo &lt;&gt; </strong>(objeto número 11):<br>
Efecto velocidad de rotación de Gobo.</p>

<p><strong>Gobo Index</strong> (objeto número&nbsp;12):<br>
Efecto posición de Gobo</p>

<a name="toc_header_anchor_7" id="toc_header_anchor_7" class="topic-toc-item"></a><h2>Efectos de Color</h2>

<p>En dot2 hay disponibles cuatro efectos de color predefinidos.</p>

<p><strong>2 Color Soft</strong> (objeto número&nbsp;13):<br>
Cambia entre dos colores con suavidad.<br>
Este es un efecto de mezcla de Color.</p>

<p><span class="image_gray_border"><img alt="" src="/Media/Image/Dot2_ViewsandWindows_EffectsView11_1-0.png"></span></p>

<p><strong>2 Color Hard </strong>(objeto número&nbsp;14):<br>
Cambia entre dos colores sin suavidad.<br>
Este es un efecto de mezcla de color.</p>

<p><span class="image_gray_border"><img alt="" src="/Media/Image/Dot2_ViewsandWindows_EffectsView12_1-0.png"></span></p>

<p><strong>RGB Rainbow</strong> (objeto número&nbsp;15):<br>
Efecto Rainbow (Arcoiris) rojo, verde, azul con suavidad.<br>
Este es un efecto de mezcla de color.</p>

<p><span class="image_gray_border"><img alt="" src="/Media/Image/Dot2_ViewsandWindows_EffectsView13_1-0.png"></span></p>

<p><strong>Colorwheel 2 color</strong> (objeto número&nbsp;16):<br>
Cambia entre dos colores.<br>
Este es un efecto de rueda de color.</p>

<a name="toc_header_anchor_8" id="toc_header_anchor_8" class="topic-toc-item"></a><h2>Efectos Beam</h2>

<p>En dot2 hay disponibles tres efectos de beam predefinidos.</p>

<p><strong>Iris </strong>(objeto número&nbsp;17):<br>
Abre y cierra la Iris.</p>

<p><img alt="" src="/Media/Image/Dot2_ViewsandWindows_EffectsView14_1-0.png"></p>

<p><strong>Shutter </strong>(objeto número&nbsp;18):<br>
Abre y cierra el Shutter.</p>

<p><img alt="" src="/Media/Image/Dot2_ViewsandWindows_EffectsView16_1-0.png"></p>

<p><strong>Strobe </strong>(objeto número&nbsp;19):<br>
Cambia entre strobo rápida y lenta.</p>

<p><img alt="" src="/Media/Image/Dot2_ViewsandWindows_EffectsView15_1-0.PNG"></p>

<a name="toc_header_anchor_9" id="toc_header_anchor_9" class="topic-toc-item"></a><h2>Efectos Focus</h2>

<p>En dot2 hay disponibles dos efectos de focus predefinidos.</p>

<p><strong>Zoom </strong>(objeto número&nbsp;20):<br>
Cambiar entre&nbsp;wide&nbsp;y&nbsp;narrow.</p>

<p><strong>Focus </strong>(objeto número&nbsp;21):<br>
Cambia entre el focus mínimo y máximo.</p>

<a name="toc_header_anchor_10" id="toc_header_anchor_10" class="topic-toc-item"></a><h2>Funciones Barra Encoders</h2>

<p>La velocidad por defecto del encoder no tiene cifras decimales.<br>
Para cambiar la velocidad del encoder a lenta, presiona la tecla encoder&nbsp;<span class="hardkey"><img alt="encoder" src="/Media/Mlg/encoder.png"></span> .<br>
Para cambiar la velocidad del encoder a ultra lenta, presione las teclas&nbsp;<span class="hardkey"><img alt="ma" src="/Media/Mlg/ma.png"></span>&nbsp;y&nbsp;<span class="hardkey"><img alt="encoder" src="/Media/Mlg/encoder.png"></span>.</p>

<p><img alt="" src="/Media/Image/Dot2_ViewsandWindows_EffectsView17_1-0.png"></p>

<p>Para utilizar la segunda función de un encoder&nbsp;mantén presionada la tecla&nbsp;<span class="hardkey"><img alt="ma" src="/Media/Mlg/ma.png"></span> .<br>
Para abrir la <a href="/Topic/014d961b-8de1-4f48-92de-e6da3cc6a15f">calculadora</a>, presiona el encoder.</p>

<p>Para información detallada sobre los ajustes, consulta en&nbsp;<a href="/Topic/ca034c9c-6b13-4948-8e83-c6e4f2ff4d21">¿Qué son Efectos?</a>.</p>

<p><strong>Valor alto o Valor bajo:</strong><br>
Para seleccionar el valor alto o bajo gira el encoder a izquierda o derecha.</p>

<p><strong>Velocidad:</strong><br>
Para seleccionar la velocidad en BPM (Beats&nbsp;Por Minuto) gira el encoder a izquierda o derecha.</p>

<p><strong>Fase:</strong><br>
Para seleccionar la fase gire el encoder a izquierda o derecha.</p>

<p><strong>Ancho o Softness:</strong><br>
Para seleccionar el ancho o el&nbsp;softness&nbsp;gira el encoder a izquierda o derecha.</p>

<a name="toc_header_anchor_11" id="toc_header_anchor_11" class="topic-toc-item"></a><h2>Links&nbsp;relacionados</h2>

<ul>
	<li><a href="/Topic/e740a39c-ef36-4081-9014-59e0a288711c">¿Qué es el Programador?</a></li>
	<li><a href="/Topic/c2173bc1-c86a-4c4f-b2d7-05a83f0e9b2a">Pool de Macros</a></li>
	<li><a href="/Topic/16b6da99-c52a-4ff8-a746-ecdacda313ff">Vista Tipo de Preset Gobo</a></li>
	<li><a href="/Topic/989f0b88-de3d-4818-8c0b-a69fa90b2106">Vista Aparatos</a></li>
	<li><a href="/Topic/ca034c9c-6b13-4948-8e83-c6e4f2ff4d21">¿Qué son Efectos?</a></li>
	<li><a href="/Topic/2457c63d-dd11-4171-b366-db5a6453f23d">¿Cómo trabajar con Efectos?</a></li>
</ul>


				<br>
<div class="topic-navigation">

<div class="pull-right">
	<span class="pull-left">


<div class="pull-left">
<form action="/Topic/SetCurrentVersionNumber" class="form-inline" id="frmTagSelector" method="post">	<span class="form-mini">
		<div class="input-prepend"><span class="add-on">Select different version</span><select autocomplete="off" id="versionNumberId" name="versionNumberId" onchange="$(this).closest('#frmTagSelector').submit();" style="width: 120px;"><option value="">- latest -</option>
<option selected="selected" value="3">1.1</option>
<option value="7">1.2</option>
<option value="12">1.3</option>
<option value="16">1.5</option>
<option value="29">1.9</option>
</select></div>
		<input data-val="true" data-val-number="The field Int32 must be a number." data-val-required="The Int32 field is required." id="ProductId" name="ProductId" type="hidden" value="7">
		<input id="CurrentGuid" name="CurrentGuid" type="hidden" value="0e539790-291a-4be0-be05-8f3e8d81c0eb">
	</span>
</form></div>&nbsp;	</span>
	<span class="pull-right" style="white-space: nowrap;">
			<button class="btn btn-mini" onclick="location.href='/Page/MA_dot2/window_editcuenumbers/es/1.1'; " title="Go to previous page 'Editar Número(s) de Cue'">
				<i class="icon-arrow-left"></i> previous
			</button>

			<button class="btn btn-mini" onclick="location.href='/Page/MA_dot2/window_emptyexecutor/es/1.1';" title="Go to next page 'Ejecutor Vacío'">
				next <i class="icon-arrow-right"></i> 
			</button>
	</span>
</div>
	<div class="clear-fix"></div>
	<div class="pull-right">
	
			<button class="btn btn-mini" onclick="location.href='/Media/TopicPdf/7319/3';" title="Open/Save this topic as PDF document for viewing or printing">
				<img src="/Content/images/icons/filetype_pdf.png"> Open topic as PDF
			</button>
	</div>
<div class="clear-fix" style="margin-bottom: 10px"></div>
</div>

	
